feat(linting): add Stylelint with SCSS configuration

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,8 +1,7 @@
-@use "modern-normalize";
-
-@use "vars/global";
-@use "themes/light";
-@use "themes/dark";
+@use 'modern-normalize';
+@use 'vars/global';
+@use 'themes/light';
+@use 'themes/dark';
 
 .app {
   font: var(--font-m);
