--- a/src/app/styles/vars/global.scss
+++ b/src/app/styles/vars/global.scss
@@ -1,5 +1,5 @@
 :root {
-  --font-family-main: consolas, "Times New Roman", serif;
+  --font-family-main: consolas, 'Times New Roman', serif;
   --font-size-m: 16px;
   --font-line-m: 24px;
   --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
@@ -19,7 +19,7 @@
   --modal-content-z-index: 999999;
 
   // Цвета
-  --overlay-color: rgba(0 0 0 / 60%);
+  --overlay-color: rgb(0 0 0 / 60%);
   --red-light: #f00;
   --red-dark: #ce0505;
 }
