--- a/src/widgets/Sidebar/ui/sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/sidebar/Sidebar.module.scss
@@ -20,7 +20,6 @@
   width: 100%;
 }
 
-
 .collapsed {
   width: var(--sidebar-width-collapsed);
 
@@ -39,7 +38,7 @@
   padding-left: 30px;
   display: flex;
   flex-direction: column;
-  gap:20px
+  gap: 20px;
 }
 
 .navLink {
@@ -52,4 +51,3 @@
   display: block;
   margin: 0 auto;
 }
-
