--- a/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
+++ b/src/features/AuthByUsername/ui/LoginForm/LoginForm.module.scss
@@ -12,3 +12,10 @@
   margin-top: 15px;
   margin-left: auto;
 }
+
+.spinnerWrap {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
